[project]
name = "targeted-transcriptomics-training-vitessce"
version = "0.1.0"
description = "Vitessce hands-on environment for the targeted transcriptomics training."
requires-python = ">=3.12,<3.13"
dependencies = [
    "harpy-vitessce>=0.1.3",
    "napari-harpy>=0.0.9",
    "jupyter",
]

[tool.uv]
package = false
